estilos/mobile.css
@charset "UTF-8";

@media screen and (min-width: 0px) and (max-width: 420px){

::-webkit-scrollbar{
    width: 0px;
}

header img{
    width: 100px;
}

header{
    margin-bottom: 30px;
}

section h1{
    font-size: 1.7em;
    margin-bottom: 50px;
}

section h2{
    margin-bottom: 30px;
    font-size: 1.2em;
}

section p {
    margin: 0px auto 30px auto;
    width: 85vw;
    font-size: 1em;
}

section.banner{
    margin-bottom: 50px;
}

#banner-tittle{
    margin-bottom: 30px;
    font-size: 2em;
}

section img{
    width: 70vw;
}

section.beneficios{
    margin-bottom: 30px;   
}   

section.slider{
    padding: 5px;
    margin-bottom: 30px;
}

section.slider span{
    width: 50px;
    border-radius: 20px;
}

section.modelos h2#modelo2{
    margin-bottom: 10px;
}

section.modelos p{
    width: 85vw;
    margin: 0px auto 30px auto;
}

section.entrega h1{
    margin-bottom: 30px;
}

section.entrega p{
    margin-bottom: 10px;
}

section.entrega span{
    margin-bottom: 20px;
}

section.contatos img{
    width: 25px;
    margin-bottom: 30px;
}

section.contatos a{
    padding-left: 20px;
    padding-right: 20px;
    text-align: center;
}

section.contatos h1{
    margin-bottom: 30px;
} 

footer{
    padding: 5px 0px 5px 0px;
}
}

@media screen and (min-width:421px) and (max-width:600px){

::-webkit-scrollbar{
width: 0px;
}

header img{
    width: 100px;
}

header{
    margin-bottom: 30px;
}

section h1{
    font-size: 2.2em;
    margin-bottom: 50px;
}

section h2{
    margin-bottom: 30px;
    font-size: 1.6em;
}

section p {
    margin: 0px auto 30px auto;
    width: 85vw;
    font-size: 1.1em;
}

section.banner{
    margin-bottom: 50px;
}

#banner-tittle{
    margin-bottom: 30px;
    font-size: 2.4em;
}

section img{
    width: 60vw;
}

section.beneficios{
    margin-bottom: 30px;   
}   

section.slider{
    padding: 5px;
    margin-bottom: 30px;
}

section.slider span{
    width: 50px;
    border-radius: 20px;
}

section.modelos h2#modelo2{
    margin-bottom: 10px;
}

section.modelos p{
    width: 85vw;
    margin: 0px auto 30px auto;
}

section.entrega h1{
    margin-bottom: 30px;
}

section.entrega p{
    margin-bottom: 10px;
}

section.entrega span{
    margin-bottom: 20px;
}

section.contatos img{
    width: 25px;
    margin-bottom: 30px;
}

section.contatos a{
    padding-left: 20px;
    padding-right: 20px;
    text-align: center;
}

section.contatos h1{
    margin-bottom: 30px;
} 

footer{
    padding: 5px 0px 5px 0px;
}
}

